@@ -36,6 +36,7 @@ import java.net.UnknownHostException;
 import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Properties;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -1287,13 +1288,66 @@ public enum ConfigurationEntry {
     /**
      * The number of file versions to use when creating a new folder.
      */
-    DEFAULT_ARCHIVE_VERSIONS("default.archive.versions", 25),
+    DEFAULT_ARCHIVE_VERSIONS("default.archive.versions", 25) {
+        @Override
+        public Integer getValueInt(Controller controller) {
+            String value = super.getValue(controller);
+
+            try {
+                return Integer.parseInt(value);
+            } catch (NumberFormatException e) {
+                if (Objects.equals(value, "unlimited")) {
+                    return -1;
+                }
+            }
+            return 25;
+        }
+    },
 
     /**
      * How many days before an archive file is cleaned up. Values 1, 7, 31, 365,
      * 0 (== never)
      */
-    DEFAULT_ARCHIVE_CLEANUP_DAYS("archive.cleanup.days", 0),
+    DEFAULT_ARCHIVE_CLEANUP_DAYS("archive.cleanup.days", 0) {
+        @Override
+        public Integer getValueInt(Controller controller) {
+            String value = super.getValue(controller);
+
+            try {
+                return Integer.parseInt(value);
+            } catch (NumberFormatException e) {
+                String[] parts = value.split("\\s+");
+
+                if (parts.length != 2) {
+                    return 0;
+                }
+
+                try {
+                    int factor = Integer.parseInt(parts[0]);
+                    String timeUnit = parts[1].toLowerCase();
+                    switch (timeUnit) {
+                        case "day":
+                        case "days":
+                            return factor;
+                        case "week":
+                        case "weeks":
+                            return 7 * factor;
+                        case "month":
+                        case "months":
+                            return 30 * factor;
+                        case "year":
+                        case "years":
+                            return 365 * factor;
+                        default:
+                            return 0;
+                    }
+                } catch (NumberFormatException ex) {
+                    return 0;
+                }
+            }
+        }
+
+    },
 
     /**
      * #2132: This transfer mode will be recommend by default.
@@ -1529,11 +1583,11 @@ public enum ConfigurationEntry {
             return null;
         }
         try {
-            return new Integer(value.trim());
+            return Integer.valueOf(value.trim());
         } catch (NumberFormatException e) {
             LOG.log(Level.WARNING, "Unable to parse configuration entry '"
                     + configKey + "' into a int. Value: " + value, e);
-            return new Integer(getDefaultValue());
+            return Integer.valueOf(getDefaultValue());
         }
     }
 
